--- a/Prosjekt/HTML/Intouchables.html
+++ b/Prosjekt/HTML/Intouchables.html
@@ -4,6 +4,7 @@
 		<head>
 			<meta charset="uft-8">
     		<title>Film: Intouchables</title>
+    		<link rel="stylesheet" type="text/css" href="background.css">
 		</head>
 
 		<body>
@@ -23,8 +24,8 @@
 
 			<p>De Urørlige er basert på en utrolig, men sann historie. Filmen, som er sett av 20 millioner franskmenn, har blitt et internasjonalt fenomen og er den mest inntjenende ikke-engelskspråklige filmen i historien. (Cover)</p>
 
-			<p>
-				<ul>Ekstramateriale:
+			<p>Ekstramateriale:
+				<ul>
 					<li>Making Of</li>
 					<li>Deleted Scenes</li>
 				</ul>
