bug fix utf skrivefeil

--- a/Prosjekt/HTML/Intouchables.html
+++ b/Prosjekt/HTML/Intouchables.html
@@ -2,7 +2,7 @@
 	<html>
 
 		<head>
-			<meta charset="uft-8">
+			<meta charset="utf-8">
     		<title>Film: Intouchables</title>
     		<link rel="stylesheet" type="text/css" href="background.css">
     		<link rel="stylesheet" type="text/css" href="Pagedesign.css">
