--- a/Prosjekt/HTML/index.html
+++ b/Prosjekt/HTML/index.html
@@ -9,6 +9,28 @@
 
 		<body>
 
+			<div class="wrapper">
+				<div class="heading">
+					<h1>Velkommen til hovedsiden.</h1>
+				</div>
+
+				<div class="navigation">
+					navigation
+				</div>
+				
+				<div class="content">
+					Main Content
+				</div>
+
+				<div class="sidebar">
+					sidebar
+				</div>
+
+				<div class="footer">
+					This website is developed by YPS.
+				</div>
+			</div>
+
 		</body>
 	
 	</html>
