Oppdatert med struktur på hjemmesiden.

--- a/Prosjekt/HTML/index.html
+++ b/Prosjekt/HTML/index.html
@@ -4,7 +4,8 @@
 		<head>
 			<meta charset="utf-8">
 			<title>Velkommen!</title>
-			<link rel="stylesheet" type="text/css" href="background.css"></style>
+			<link rel="stylesheet" type="text/css" href="background.css"></link>
+			<link rel="stylesheet" type="text/css" href="mainpage.css">
 		</head>
 
 		<body>
