--- a/Prosjekt/HTML/index.html
+++ b/Prosjekt/HTML/index.html
@@ -13,6 +13,12 @@
 			<div class="wrapper">
 				<div class="heading">
 					<h1>Velkommen til hovedsiden.</h1>
+					
+					<!--Searchbar funksjon-->
+					<form class="searchbar">
+						<input type="text" placeholder="Søk etter en film" maxlength="30" id="search">
+						<input type="submit" value="søk" id="submit">
+					</form>
 				</div>
 
 				<div class="navigation">
