--- a/Prosjekt/HTML/index.html
+++ b/Prosjekt/HTML/index.html
@@ -9,32 +9,40 @@
 		</head>
 
 		<body>
-
+			<div class="navigation">
+				<div class=nav_wrapper>
+					<ul>
+						<li><a href="#">Hjem</a></li><li>
+						<a href="#">Filmer</a></li><li>
+						<a href="#">IMDB</a></li><li>
+						<a href="#">Om oss</a></li><li>
+						<a href="#">logg inn</a></li>
+					</ul>
+				</div>
+			</div>
+			
 			<div class="wrapper">
 				<div class="heading">
-					<h1>Velkommen til hovedsiden.</h1>
-					
-					<!--Searchbar funksjon-->
-					<form class="searchbar">
-						<input type="text" placeholder="Søk etter en film" maxlength="30" id="search">
-						<input type="submit" value="søk" id="submit">
-					</form>
-				</div>
-
-				<div class="navigation">
-					navigation
+					<h1>Velkommen til hovedsiden!</h1>
 				</div>
 				
 				<div class="content">
 					Main Content
+
 				</div>
 
 				<div class="sidebar">
-					sidebar
+						sidebar
+						<!--Searchbar funksjon-->
+					<form class="searchbar">
+						<input type="text" placeholder="Søk etter filmer" maxlength="30" id="search">
+						<input type="submit" value="søk" id="submit">
+					</form>
+
 				</div>
 
 				<div class="footer">
-					This website is developed by YPS.
+						This website is developed by YPS.
 				</div>
 			</div>
 
