--- a/Prosjekt/index.html
+++ b/Prosjekt/index.html
@@ -4,8 +4,8 @@
 		<head>
 			<meta charset="utf-8">
 			<title>Velkommen!</title>
-			<link rel="stylesheet" type="text/css" href="background.css"></link>
-			<link rel="stylesheet" type="text/css" href="mainpage.css">
+			<link rel="stylesheet" type="text/css" href="CSS/background.css"></link>
+			<link rel="stylesheet" type="text/css" href="CSS/mainpage.css"></link>
 		</head>
 
 		<body>
