Bug fix etter opprydding.

--- a/Prosjekt/HTML/mi.html
+++ b/Prosjekt/HTML/mi.html
@@ -3,8 +3,8 @@
 		<head>
 			<meta charset="utf-8">
     		<title>Film: Mission impossible</title>
-    		<link rel="stylesheet" type="text/css" href="background.css">
-    		<link rel="stylesheet" type="text/css" href="Pagedesign.css">
+    		<link rel="stylesheet" type="text/css" href="../CSS/background.css">
+    		<link rel="stylesheet" type="text/css" href="../CSS/Pagedesign.css">
     		</style>
 		</head>
 
