--- a/Prosjekt/HTML/Intouchables.html
+++ b/Prosjekt/HTML/Intouchables.html
@@ -4,8 +4,8 @@
 			<meta charset="utf-8">
     		<title>Film: Intouchables</title>
     		<!--Importerer 2 css, background for bakgrunn og Pagedesign for utseende.-->
-    		<link rel="stylesheet" type="text/css" href="background.css">
-    		<link rel="stylesheet" type="text/css" href="Pagedesign.css">
+    		<link rel="stylesheet" type="text/css" href="../CSS/background.css">
+    		<link rel="stylesheet" type="text/css" href="../CSS/Pagedesign.css">
     		<meta name="viewport" content="width=deveice-width, initial-scale=1.0">
 		</head>
 		
