--- a/Prosjekt/index.html
+++ b/Prosjekt/index.html
@@ -22,23 +22,26 @@
 			</div>
 			
 			<div class="wrapper">
+
 				<div class="heading">
 					<h1>Velkommen til hovedsiden!</h1>
 				</div>
-				
-				<div class="content">
-					Main Content
 
+				<div class="leftbar">
+					leftbar
 				</div>
 
-				<div class="sidebar">
-						sidebar
-						<!--Searchbar funksjon-->
+				<div class="rightbar">
+					sidebar
+					<!--Searchbar funksjon-->
 					<form class="searchbar">
 						<input type="text" placeholder="Søk etter filmer" maxlength="30" id="search">
 						<input type="submit" value="søk" id="submit">
 					</form>
+				</div>
 
+				<div class="content">
+					Main Content
 				</div>
 
 				<div class="footer">
