--- a/Prosjekt/index.html
+++ b/Prosjekt/index.html
@@ -6,6 +6,7 @@
 			<title>Velkommen!</title>
 			<link rel="stylesheet" type="text/css" href="CSS/background.css"></link>
 			<link rel="stylesheet" type="text/css" href="CSS/mainpage.css"></link>
+			<meta name="viewport" content="width-device-width, initial-scale=1.0">
 		</head>
 
 		<body>
