--- a/Prosjekt/HTML/Intouchables.html
+++ b/Prosjekt/HTML/Intouchables.html
@@ -19,11 +19,11 @@
 						<a href="#">Om oss</a></li><li>
 						<a href="#">logg inn</a></li>
 					</ul>
-					<form class="searchbar">
-						<input type="text" placeholder="Søk etter filmer" maxlength="30" id="search">
-						<input type="sumbit" value="søk" id="submit">
-					</form>
 				</div>
+				<form class="searchbar">
+					<input type="text" placeholder="Søk etter filmer" maxlength="30" id="search">
+					<input type="submit" value="søk" id="submit">
+				</form>
 			</div>
 
 
