--- a/Prosjekt/index.html
+++ b/Prosjekt/index.html
@@ -19,17 +19,17 @@
 				<div class="navigation">
 					<div class=nav_wrapper>
 						<ul>
-							<li><a href="#">Hjem</a></li><li>
+							<li><a href="index.html">Hjem</a></li><li>
 							<a href="#">Filmer</a></li><li>
-							<a href="#">IMDB</a></li><li>
+							<a href="http://www.imdb.com/">IMDB</a></li><li>
 							<a href="#">Om oss</a></li><li>
 							<a href="#">logg inn</a></li>
 						</ul>
 					</div>
 					<!--Searchbar funksjon-->
-					<form class="searchbar">
+					<form class="searchbar" action="html/search.html"> <!-- Foreløpig linket til statis side-->
 						<input type="text" placeholder="Søk etter filmer" maxlength="30" id="search">
-						<input type="submit" value="søk" id="submit">
+						<input type="submit" value="søk" id="submit" Onclick="window.location.href='http://www.computerhope.com/'">
 					</form>
 				</div>
 
