Rating system er på plass for filmene.

--- a/Prosjekt/HTML/Intouchables.html
+++ b/Prosjekt/HTML/Intouchables.html
@@ -20,7 +20,7 @@
 						<a href="#">logg inn</a></li>
 					</ul>
 				</div>
-				<form class="searchbar">
+				<form class="searchbar" action="search.html">
 					<input type="text" placeholder="Søk etter filmer" maxlength="30" id="search">
 					<input type="submit" value="søk" id="submit">
 				</form>
@@ -58,8 +58,14 @@
 							<li>Making Of</li>
 							<li>Deleted Scenes</li>
 						</ul>
-					</p>
+					</p></br>
+					<h2>Hva synes du om filmen?</h2>
 				</div>
+	
+				<div class="rating">
+					<span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
+				</div>
+
 			</div>
 		</body>
 
