--- a/Prosjekt/HTML/mi.html
+++ b/Prosjekt/HTML/mi.html
@@ -19,7 +19,7 @@
 						<a href="#">logg inn</a></li>
 					</ul>
 				</div>
-				<form class="searchbar">
+				<form class="searchbar" action="search.html">
 					<input type="text" placeholder="Søk etter filmer" maxlength="30" id="search">
 					<input type="submit" value="søk" id="submit">
 				</form>
@@ -43,7 +43,13 @@
 
 				<div class="noekkelord">
 					<h4>Nøkkelord:</h4>
-					<p>Tom Cruise spiller Ethan Hunt, hemmelig agent som uskyldig blir anklaget for drapene på sin egen etterretningsgruppe. Han er på flukt fra regjeringens leiemordere, bryter seg inn i CIA's mest uinntrengelige hvelv, klamrer seg til taket på et lyntog i fart, - alltid ett skritt foran sine fiender er han i ferd med å avsløre den sjokkerende sannheten!</p>
+					<p>Tom Cruise spiller Ethan Hunt, hemmelig agent som uskyldig blir anklaget for drapene på sin egen etterretningsgruppe. Han er på flukt fra regjeringens leiemordere, bryter seg inn i CIA's mest uinntrengelige hvelv, klamrer seg til taket på et lyntog i fart, - alltid ett skritt foran sine fiender er han i ferd med å avsløre den sjokkerende sannheten!</p></br>
+
+					<h2>Hva synes du om filmen?</h2>
+				</div>
+
+				<div class="rating">
+					<span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
 				</div>
 			</div>
 		</body>
