--- a/Prosjekt/HTML/Intouchables.html
+++ b/Prosjekt/HTML/Intouchables.html
@@ -11,6 +11,10 @@
 		
 		<body>
 			<div class="navigation">
+				<div class="heading">
+					<h1>Velkommen til hovedsiden!</h1>
+				</div>
+				
 				<div class=nav_wrapper>
 					<ul>
 						<li><a href="../index.html">Hjem</a></li><li>
