--- a/Prosjekt/HTML/search.html
+++ b/Prosjekt/HTML/search.html
@@ -9,6 +9,9 @@
 	
 	<body>
 		<div class="navigation">
+				<div class="heading">
+						<h1>Velkommen til hovedsiden!</h1>
+				</div>
 				<div class=nav_wrapper>
 					<ul>
 						<li><a href="../index.html"">Hjem</a></li><li>
