Trailer er lagt til på mi.html

--- a/Prosjekt/HTML/mi.html
+++ b/Prosjekt/HTML/mi.html
@@ -46,14 +46,16 @@
 
 				<div class="noekkelord">
 					<h4>Nøkkelord:</h4>
-					<p>Tom Cruise spiller Ethan Hunt, hemmelig agent som uskyldig blir anklaget for drapene på sin egen etterretningsgruppe. Han er på flukt fra regjeringens leiemordere, bryter seg inn i CIA's mest uinntrengelige hvelv, klamrer seg til taket på et lyntog i fart, - alltid ett skritt foran sine fiender er han i ferd med å avsløre den sjokkerende sannheten!</p></br>
+					<p>Tom Cruise spiller Ethan Hunt, hemmelig agent som uskyldig blir anklaget for drapene på sin egen etterretningsgruppe. Han er på flukt fra regjeringens leiemordere, bryter seg inn i CIA's mest uinntrengelige hvelv, klamrer seg til taket på et lyntog i fart, - alltid ett skritt foran sine fiender er han i ferd med å avsløre den sjokkerende sannheten!</p><br>
 
-					<h2>Hva synes du om filmen?</h2>
+					<h2>Hva synes du om filmen?</h2><br>
 				</div>
 
 				<div class="rating">
-					<span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
+					<span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span><br>
 				</div>
+
+				<iframe class="trailer" width="560" height="315" src="http://www.youtube.com/embed/QBavzf2_ook" frameborder="0"></iframe>
 			</div>
 		</body>
 	</html>
