Trailer også addet på intouchables.html.

--- a/Prosjekt/HTML/Intouchables.html
+++ b/Prosjekt/HTML/Intouchables.html
@@ -63,13 +63,15 @@
 							<li>Deleted Scenes</li>
 						</ul>
 					</p></br>
-					<h2>Hva synes du om filmen?</h2>
-				</div>
-	
-				<div class="rating">
-					<span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
 				</div>
 
+				<iframe class="trailer" width="560" height="315" src="http://www.youtube.com/embed/34WIbmXkewU?" frameborder="0" allowfullscreen></iframe>
+				<div class="tilbakemelding">
+					<h2>Hva synes du om filmen?</h2>
+					<div class="rating">
+						<span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
+					</div>
+				</div>
 			</div>
 		</body>
 
