--- a/Prosjekt/index.html
+++ b/Prosjekt/index.html
@@ -10,7 +10,6 @@
 		</head>
 
 		<body>
-			
 			<div class="wrapper">
 				<div class="heading">
 					<h1>Velkommen til hovedsiden!</h1>
@@ -43,6 +42,16 @@
 
 				<div class="content">
 					Main Content
+					<div class="main post">
+						<h3>Rutiner</h3><br>
+							<ol>
+								<li>Følgende kan låne: staben ved Institutt for informasjons- og medievitenskap, studenter ved instituttet, på grunnlag av faglig begrunnese, andre ved UiB Eetter særlig avtale for et avgrenset tidsrom eller for et avgrenset prosjekt.</li><br>
+								<li>Bestillinger vil bli effektuert hver arbeidsdag mellom klokken 14:00 og 15:00.</li><br>
+								<li>Ansatte ved instituttet får filmen lagt i posthyllen, studenter og andre får tilbakemelding om hvor og når filmen kan hentes.</li><br>
+								<li>For alt utlån gjelder en generell regel om lånetid på 1 uke, som kan forlenges med ytterligere en uke. Ønskes en film lånt over en lengre periode må dette begrunnes, og hver enkelt forespørsel vil bli vurdert.</li><br>
+								<li>Film skal leveres tilbake i posthyllen merket retur av film.</li><br>
+							</ol>
+					</div>
 				</div>
 
 				<div class="footer">
