Oppdatert nyeste filmer.

--- a/Prosjekt/index.html
+++ b/Prosjekt/index.html
@@ -33,15 +33,21 @@
 				</div>
 
 				<div class="leftbar">
-					leftbar
+					<h2>NYESTE FILMER:</h2>
+					<a href="HTML/mi.html">
+						<img src="Resources/mi_1.jpg" id="mi_link" alt="Mission Impossible">
+					</a>
+					<a href="HTML/Intouchables.html">
+						<img src="Resources/The_Intouchables_3.jpg" id="I_link" alt="Intouchables">
+					</a>
+
 				</div>
 
 				<div class="rightbar">
-					sidebar
+					sidebar: Kommer snart.
 				</div>
 
 				<div class="content">
-					Main Content
 					<div class="main post">
 						<h3>Rutiner</h3><br>
 							<ol>
