--- a/Prosjekt/index.html
+++ b/Prosjekt/index.html
@@ -25,11 +25,14 @@
 							<a href="#">logg inn</a></li>
 						</ul>
 					</div>
+					
 					<!--Searchbar funksjon-->
+					<fieldset>
 					<form class="searchbar" action="html/search.html"> <!-- Foreløpig linket til statis side-->
 						<input type="text" placeholder="Søk etter filmer" maxlength="30" id="search">
 						<input type="submit" value="søk" id="submit" Onclick="window.location.href='http://www.computerhope.com/'">
 					</form>
+				</fieldset>
 				</div>
 
 				<div class="leftbar">
@@ -45,6 +48,7 @@
 
 				<div class="rightbar">
 					sidebar: Kommer snart.
+					<script src="test.js"></script>
 				</div>
 
 				<div class="content">
