--- a/Prosjekt/index.html
+++ b/Prosjekt/index.html
@@ -28,7 +28,7 @@
 					
 					<!--Searchbar funksjon-->
 					<fieldset>
-					<form class="searchbar" action="html/search.html"> <!-- Foreløpig linket til statis side-->
+					<form class="searchbar" action="HTML/search.html"> <!-- Foreløpig linket til statis side-->
 						<input type="text" placeholder="Søk etter filmer" maxlength="30" id="search">
 						<input type="submit" value="søk" id="submit" Onclick="window.location.href='http://www.computerhope.com/'">
 					</form>
