--- a/Prosjekt/index.html
+++ b/Prosjekt/index.html
@@ -47,8 +47,19 @@
 				</div>
 
 				<div class="rightbar">
-					sidebar: Kommer snart.
-					<script src="test.js"></script>
+						<form id="search" class="quickSearch" action="search_results.html" method="get">
+							<div>
+								<h1>Quick search</h1>
+							</div>
+							<fieldset>
+								<legend>Søk</legend>
+								<div>
+									<label for="film_title">Film tittel</label>
+									<input id="film_title" name="film_title" type="text" placeholder="e.g. King Kong" >
+								</div>
+							</fieldset>
+							<input type="submit" id="submit_search" value="Søk">
+						</form>
 				</div>
 
 				<div class="content">
