Endret litt på searchbar

--- a/Prosjekt/index.html
+++ b/Prosjekt/index.html
@@ -28,9 +28,8 @@
 					
 					<!--Searchbar funksjon-->
 					<fieldset>
-					<form class="searchbar" action="HTML/search.html"> <!-- Foreløpig linket til statis side-->
-						<input type="text" placeholder="Søk etter filmer" maxlength="30" id="search">
-						<input type="submit" value="søk" id="submit" Onclick="window.location.href='http://www.computerhope.com/'">
+					<form class="searchbar" method="POST"> <!-- Foreløpig linket til statis side-->
+						<input type="text" placeholder="Søk etter filmer" maxlength="30" id="search"><input type="submit" value="søk" id="submit" />
 					</form>
 				</fieldset>
 				</div>
