søkefunksjonen i search_result.js er skrevet.

--- a/Prosjekt/second/index.html
+++ b/Prosjekt/second/index.html
@@ -5,7 +5,7 @@
   <head>
     <!-- Don't need scripts here -->
   </head>
-  <body onload="load_example();">
+  <body>
     <h2 id="filmtittel">Filmbiblioteket</h2>
     <a href="all_movies.html">All movies</a>
 	<!-- Skjemaet gir mulighet for å søke etter film tittel. Dere må inkludere muligheten for et mer avansert søk -->
