--- a/Prosjekt/second/search_results.html
+++ b/Prosjekt/second/search_results.html
@@ -8,8 +8,8 @@
 	<script src="script/object.js" type="text/javascript"></script>
   </head>
   <body>
-	<div id="film_title"></div>
-	<div id="actor"></div>
+	<div id="film_title">{{ movie.otitle }}</div>
+	<div id="actor">{{ movie.folk }}</div>
 	<div id="director"></div>
 	<div id="genre"></div>
 	<div id="country"></div>
