--- a/Prosjekt/second/search_results.html
+++ b/Prosjekt/second/search_results.html
@@ -8,14 +8,15 @@
 	<script src="script/object.js" type="text/javascript"></script>
   </head>
   <body>
-	<div id="film_title">tittelen er <span>{{ searchResults[0].otitle }}</span></div>
+	<div id="film_title"></span></div>
 	<div id="actor">{{ }}</div>
 	<div id="director">{{  }}</div>
 	<div id="genre"></div>
 	<div id="country"></div>
 	<!-- Returnere resultatene som en (ordered <ol>) liste -->
-	<ol id="res_list" data-repeat="searchResults">
-		<li><span>{{ $elt.otitle }}</span> <span>{{ $elt.folk }}</span></li>
+	<ol id="res_list" data-if="searchResults && searchResults.length > 0" data-repeat="searchResults">
+		<li><span><b>{{ $elt.otitle }}</b></span> <span>{{ $elt.folk }}</span></li>
 	</ol>
+	<div data-if="!searchResults || searchResults.length == 0">Beklager, ingen resultater funnet.</div>
   </body>
 </html>
