Endret mappestrukturen og søkefunksjon fungerer

--- a/Prosjekt/index.html
+++ b/Prosjekt/index.html
@@ -27,8 +27,8 @@
 					
 					<!--Searchbar funksjon-->
 					<fieldset>
-					<form class="searchbar" method="POST"> <!-- Foreløpig linket til statis side-->
-						<input type="text" placeholder="Søk etter filmer" maxlength="30" id="search"><input type="submit" value="søk" id="submit" />
+					<form class="searchbar" action="HTML/search_results.html" method="get"> <!-- Foreløpig linket til statis side-->
+						<input type="film_title" name="film_title" placeholder="Skriv title på filmen her" id="search"><input type="submit" value="søk" id="submit" />
 					</form>
 				</fieldset>
 				</div>
