--- a/Prosjekt/HTML/search_results.html
+++ b/Prosjekt/HTML/search_results.html
@@ -3,9 +3,9 @@
 <html>
   <meta charset="utf-8"/>
   <head>
-    <script src="script/query_params.js" type="text/javascript"></script>
-	<script src="script/search_results.js" type="text/javascript"></script>
-	<script src="script/object.js" type="text/javascript"></script>
+    <script src="../Scripts/query_params.js" type="text/javascript"></script>
+	<script src="../Scripts/search_results.js" type="text/javascript"></script>
+	<script src="../Scripts/object.js" type="text/javascript"></script>
   </head>
   <body>
 	<div id="film_title"></span></div>
