--- a/Prosjekt/HTML/search.html
+++ b/Prosjekt/HTML/search.html
@@ -14,7 +14,7 @@
 				</div>
 				<div class=nav_wrapper>
 					<ul>
-						<li><a href="../index.html"">Hjem</a></li><li>
+						<li><a href="../index.html">Hjem</a></li><li>
 						<a href="#">Filmer</a></li><li>
 						<a href="http://www.imdb.com/">IMDB</a></li><li>
 						<a href="#">Om oss</a></li><li>
