template_engine.js er skilt ut fra search_result.js.

--- a/Prosjekt/index.html
+++ b/Prosjekt/index.html
@@ -45,19 +45,7 @@
 				</div>
 
 				<div class="rightbar">
-						<form id="search" class="quickSearch" action="search_results.html" method="get">
-							<div>
-								<h1>Quick search</h1>
-							</div>
-							<fieldset>
-								<legend>Søk</legend>
-								<div>
-									<label for="film_title">Film tittel</label>
-									<input id="film_title" name="film_title" type="text" placeholder="e.g. King Kong" >
-								</div>
-							</fieldset>
-							<input type="submit" id="submit_search" value="Søk">
-						</form>
+					bjart lee
 				</div>
 
 				<div class="content">
