--- a/Prosjekt/index.html
+++ b/Prosjekt/index.html
@@ -18,7 +18,7 @@
 					<div class=nav_wrapper>
 						<ul>
 							<li><a href="index.html">Hjem</a></li><li>
-							<a href="#">Filmer</a></li><li>
+							<a href="HTML/advanced_search.html">Avansert søk</a></li><li>
 							<a href="http://www.imdb.com/">IMDB</a></li><li>
 							<a href="#">Om oss</a></li><li>
 							<a href="#">logg inn</a></li>
@@ -27,10 +27,10 @@
 					
 					<!--Searchbar funksjon-->
 					<fieldset>
-					<form class="searchbar" action="HTML/search_results.html" method="get"> <!-- Foreløpig linket til statis side-->
-						<input type="film_title" name="film_title" placeholder="Skriv title på filmen her" id="search"><input type="submit" value="søk" id="submit" />
-					</form>
-				</fieldset>
+						<form class="searchbar" action="HTML/search_results.html" method="get"> <!-- Foreløpig linket til statis side-->
+							<input type="film_title" name="film_title" placeholder="Skriv title på filmen her" id="search"><input type="submit" value="søk" id="submit" />
+						</form>
+					</fieldset>
 				</div>
 
 				<div class="leftbar">
@@ -64,7 +64,7 @@
 				<div class="footer">
 						This website is developed by YPS.
 				</div>
-			</div>
+			</div> <!-- /.wrapper -->
 
 		</body>
 	
