--- a/Prosjekt/HTML/search_results.html
+++ b/Prosjekt/HTML/search_results.html
@@ -7,9 +7,11 @@
 		<link rel="stylesheet" href="../CSS/background.css">
 		<link rel="stylesheet" href="../CSS/mainpage.css">
 		<script src="../Scripts/template_engine.js" type="text/javascript"></script>
-    <script src="../Scripts/query_params.js" type="text/javascript"></script>
-		<script src="../Scripts/search_results.js" type="text/javascript"></script>
+   		<script src="../Scripts/query_params.js" type="text/javascript"></script>
 		<script src="../Scripts/object.js" type="text/javascript"></script>
+		<script src="../Scripts/genres.js" type="text/javascript"></script>
+		<script src="../Scripts/search_results.js" type="text/javascript"></script>
+
   </head>
   <body>
 		<div class="wrapper">
