--- a/Prosjekt/HTML/show_movie.html
+++ b/Prosjekt/HTML/show_movie.html
@@ -2,6 +2,7 @@
 <html>
   <meta charset="utf-8"/>
   <head>
+    <script type="text/javascript" src="../Scripts/template_engine.js"></script>
     <script type="text/javascript" src="../Scripts/object.js"></script>
     <script type="text/javascript" src="../Scripts/genres.js"></script>
     <script type="text/javascript" src="../Scripts/reviews.js"></script>
@@ -33,6 +34,8 @@
 		<td align="center"><b>Key</b></td><td align="center"><b>Value</b></td>
       </tr>
     </table>
-      
+
+    <iframe data-if='displayMovie["youtube trailer id"]' width="420" height="315" src='https://www.youtube.com/embed/{{displayMovie["youtube trailer id"]}}' </iframe>
+
   </body>
 </html>
