Skrevet bildefunksjon for show_movie

--- a/Prosjekt/HTML/advanced_search.html
+++ b/Prosjekt/HTML/advanced_search.html
@@ -15,7 +15,7 @@
 					<div class=nav_wrapper>
 						<ul>
 							<li><a href="../index.html">Hjem</a></li><li>
-							<a href="#">Filmer</a></li><li>
+							<a href="advanced_search.html">Avansert søk</a></li><li>
 							<a href="http://www.imdb.com/">IMDB</a></li><li>
 							<a href="#">Om oss</a></li><li>
 							<a href="#">logg inn</a></li>
