--- a/Prosjekt/HTML/show_movie.html
+++ b/Prosjekt/HTML/show_movie.html
@@ -12,6 +12,7 @@
   <body>
     <h2 id="otitle"></h2>
 	<!-- Alt under er en enkelt formatert tabell som viser all informasjon som er tilgjengelig om denne filmen -->
+    <img src="https://nelson.uib.no/o/{{Math.floor(displayMovie.id / 1000)}}/{{displayMovie.id}}.jpg" class="bilde">
     <hr>
     <h5>Denne siden viser detaljer om en film.</h5>
     <table id="movie_stat_table" border=1>
