Litt flere kommentarer.

--- a/Prosjekt/index.html
+++ b/Prosjekt/index.html
@@ -6,9 +6,9 @@
 			<link rel="stylesheet" type="text/css" href="CSS/background.css"></link>
 			<link rel="stylesheet" type="text/css" href="CSS/mainpage.css"></link>
 			<meta name="viewport" content="width-device-width, initial-scale=1.0">
-			<script src="../Scripts/template_engine.js" type="text/javascript"></script>
-			<script src="../Scripts/borrowed.js" type="text/javascript"></script>
-			<script src="../Scripts/wish_list.js" type="text/javascript"></script>
+			<script src="Scripts/template_engine.js" type="text/javascript"></script>
+			<script src="Scripts/borrowed.js" type="text/javascript"></script>
+			<script src="Scripts/wish_list.js" type="text/javascript"></script>
 		</head>
 
 		<body>
