--- a/Prosjekt/HTML/search_results.html
+++ b/Prosjekt/HTML/search_results.html
@@ -36,9 +36,9 @@
 				
 					<!-- Returnere resultatene som en (ordered <ol>) liste -->
 					<ol id="res_list" data-if="searchResults && searchResults.length > 0" data-repeat="searchResults">
-						<!-- Her har vi et lite problem med linken. -->
 						<h3><li><span> <a href="show_movie.html?id={{$elt.id}}">{{ $elt.otitle }}</a> </span></li><h3>
 					</ol>
+				<!-- Hvis searchResults er tom, viser meldingen-->
 				<div data-if="!searchResults || searchResults.length == 0">Beklager, ingen resultater funnet.</div>
 				</div>
 				<div class="footer">
