kommentert litt mer.

--- a/Prosjekt/HTML/search_results.html
+++ b/Prosjekt/HTML/search_results.html
@@ -27,7 +27,7 @@
 							<a href="#">logg inn</a></li>
 						</ul>
 					</div>
-					<form class="searchbar" action="search_results.html" method="get"> <!-- Foreløpig linket til statis side-->
+					<form class="searchbar" action="search_results.html" method="get">
 							<input type="film_title" name="film_title" placeholder="Skriv title på filmen her" id="search"><input type="submit" value="søk" id="submit" />
 					</form>
 			  </div>
