oppdatert til logg ut istedenfor logg in

--- a/Prosjekt/HTML/search.html
+++ b/Prosjekt/HTML/search.html
@@ -18,7 +18,7 @@
 						<a href="#">Filmer</a></li><li>
 						<a href="http://www.imdb.com/">IMDB</a></li><li>
 						<a href="#">Om oss</a></li><li>
-						<a href="#">logg inn</a></li>
+						<a href="#">logg ut</a></li>
 					</ul>
 				</div>
 				<form class="searchbar">
