--- a/Prosjekt/HTML/search_results.html
+++ b/Prosjekt/HTML/search_results.html
@@ -24,7 +24,7 @@
 							<li><a href="../index.html">Hjem</a></li><li>
 							<a href="advanced_search.html">Avansert søk</a></li><li>
 							<a href="#">Om oss</a></li><li>
-							<a href="#">logg inn</a></li>
+							<a href="#">logg ut</a></li>
 						</ul>
 					</div>
 					<form class="searchbar" action="search_results.html" method="get">
