--- a/Prosjekt/index.html
+++ b/Prosjekt/index.html
@@ -24,7 +24,7 @@
 							<a href="HTML/advanced_search.html">Avansert søk</a></li><li>
 							<a href="http://www.imdb.com/">IMDB</a></li><li>
 							<a href="#">Om oss</a></li><li>
-							<a href="#">logg inn</a></li>
+							<a href="#">logg ut</a></li>
 						</ul>
 					</div>
 					
