--- a/Prosjekt/HTML/advanced_search.html
+++ b/Prosjekt/HTML/advanced_search.html
@@ -18,7 +18,7 @@
 							<a href="advanced_search.html">Avansert søk</a></li><li>
 							<a href="http://www.imdb.com/">IMDB</a></li><li>
 							<a href="#">Om oss</a></li><li>
-							<a href="#">logg inn</a></li>
+							<a href="#">logg ut</a></li>
 						</ul>
 					</div>
 					<form class="searchbar" action="search_results.html" method="get"> <!-- Foreløpig linket til statis side-->
