--- a/Prosjekt/index.html
+++ b/Prosjekt/index.html
@@ -25,6 +25,7 @@
 							<a href="http://www.imdb.com/">IMDB</a></li><li>
 							<a href="#">Om oss</a></li><li>
 							<a href="#">logg ut</a></li>
+							<div id="fake_user"> testBruker</div>
 						</ul>
 					</div>
 					
@@ -37,7 +38,7 @@
 				</div>
 
 				<div class="leftbar">
-					<h2>NYESTE FILMER:</h2>
+					<h2>Oppdateringer:</h2>
 
 				</div>
 
